# plasma-runner-pidgin

./: .gitignore  CMakeLists.txt  README.md  install.sh  plasma-runner-pidgin_1.0.0_amd64.deb
src/: Buddy.cpp  Buddy.h  CMakeLists.txt  PidginClient.cpp  PidginClient.h  PidginRunner.cpp  PidginRunner.h  client_test.cpp  plasma-runner-pidgin.desktop
